<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_above="@+id/activity_search_bottom_navigation">

        <LinearLayout
            android:layout_margin="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10sp"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="10sp">

                <android.support.v7.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="true">
                </android.support.v7.widget.SearchView>
            </android.support.v7.widget.CardView>

            <HorizontalScrollView
                android:id="@+id/friends_scrollview"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:overScrollMode="never">
                <LinearLayout
                    android:layout_marginHorizontal="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <android.support.v7.widget.CardView
                        android:id="@+id/filter_itineraries"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10sp"
                        android:layout_marginHorizontal="5sp"
                        android:layout_marginVertical="5sp">
                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_filter_itineraries"
                            android:layout_marginHorizontal="5sp"
                            android:layout_marginVertical="2sp"
                            />
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:id="@+id/filter_locations"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10sp"
                        android:layout_marginHorizontal="5sp"
                        android:layout_marginVertical="5sp">
                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_filter_locations"
                            android:layout_marginHorizontal="5sp"
                            android:layout_marginVertical="2sp"
                            />
                    </android.support.v7.widget.CardView>
                    <android.support.v7.widget.CardView
                        android:id="@+id/filter_activities"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10sp"
                        android:layout_marginHorizontal="5sp"
                        android:layout_marginVertical="5sp">
                        <TextView
                            android:layout_gravity="center_horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search_filter_activities"
                            android:layout_marginHorizontal="5sp"
                            android:layout_marginVertical="2sp"
                            />
                    </android.support.v7.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_margin="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/previous_searches_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/title_my_trip"
                    />
            </LinearLayout>

        </LinearLayout>



    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/activity_search_bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@color/background_navbar"
        app:itemIconTint="@drawable/bottom_navigation_colors"
        app:itemTextColor="@drawable/bottom_navigation_colors"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/navigation" />

</RelativeLayout>